refactor: rename `$`/`$view` to `find`/`findInView`
The `$`/`$view` DSL methods read poorly in Java and clash with IDE
conventions for synthetic identifiers.

Introduce `find` and `findInView` across `BaseBrowserlessTest`,
`BrowserlessUIContext` and `AbstractBrowserlessExtension`. On
`BaseBrowserlessTest` (public since 1.0) the legacy `$`/`$view`
methods are kept as `@Deprecated(forRemoval = true)` delegates; on the
1.1-alpha context/extension API they are renamed outright, and the
short-lived `get`/`getView` aliases are dropped in favor of the new
names.

Fixes #39